[package]
name = "nolox"
version = "0.1.0"
authors = ["Damir Shaikhutdinov <lost404@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.9.0"
x86_64 = "0.11.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[package.metadata.bootimage]
run-args = [
   "-display", "none"
]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 10
